--- a/src/components/styles/style.css
+++ b/src/components/styles/style.css
@@ -7,10 +7,11 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 .hero-header {
-    padding: 0 100px;
+    /* padding: 0 100px; */
     height: 100vh;
 }
 
@@ -47,6 +48,7 @@
 .hero-container {
     display: flex;
     height: 600px;
+    padding-left: 60px;
 }
 
 .slogan-container {
