--- a/src/components/styles/style.css
+++ b/src/components/styles/style.css
@@ -11,8 +11,11 @@
 }
 
 .hero-header {
-    /* padding: 0 100px; */
-    height: 100vh;
+    height: fit-content;
+}
+
+.menu-wrapper {
+    width: 100%;
 }
 
 .header-img {
