--- a/src/components/styles/style.css
+++ b/src/components/styles/style.css
@@ -35,6 +35,7 @@
 .nav-menu {
     display: flex;
     justify-content: space-around;
+    align-items: center;
     width: 40%;
     margin-top: 35px;
     color: #FFF;
@@ -46,6 +47,11 @@
 
 .nav-menu li {
     cursor: pointer;
+    transition: .2s;
+}
+
+.nav-menu li:hover {
+    border-bottom: 2px solid #FFF;
 }
 
 .hero-container {
