--- a/src/pages/styles/index.css
+++ b/src/pages/styles/index.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 
-p {
+p, label {
     font-family: 'Helevetica', sans-serif;
 }
 
@@ -19,6 +19,7 @@ p {
 .section-container {
     display: flex;
     flex-direction: column;
+    box-flex: wrap;
     padding: 50px 220px;
     justify-content: space-around;
     height: 100%
@@ -135,7 +136,7 @@ p {
 
 .testimonials-container {
     color: #00247D;
-    height: 900px;
+    height: 100%;
     justify-content: space-between;
 }
 
@@ -205,3 +206,112 @@ p {
     align-items: center;
     flex-wrap: wrap;
 }
+
+.email-container {
+    height: 700px;
+    display: flex;
+    justify-content: center;
+}
+
+.signup-container {
+    background-color: #3D66CC;
+    height: 412px;
+    width: 900px;
+    border-radius: 30px;
+    padding: 90px 60px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-self: center;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    height: 100%;
+    justify-content: space-around;
+    align-items: center;
+}
+
+form input[type="checkbox"] {
+    width: 25px;
+}
+
+form button[type="submit"], input[type="email"] {
+    height: 60px;
+    border: none;
+}
+
+form input[type="email"] {
+    width: 500px;
+    background-color: #E8E8E8;
+    color: #6A6A6A;
+    font-weight: bold;
+    font-family: 'Helvetica', sans-serif;
+    padding: 20px;
+    border-top-left-radius: 15px;
+    border-bottom-left-radius: 15px;
+}
+
+form button[type="submit"] {
+    background-color: #B31B2C;
+    width: 120px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+}
+
+form img {
+    margin: 0;
+}
+
+form label {
+    vertical-align: middle;
+}
+
+.form-options {
+    display: flex;
+    justify-content: space-evenly;
+    width: 500px;
+}
+
+.email-form {
+    display: flex;
+    justify-content: center;
+}
+
+.tri-top {
+    background-image: url('../../../public/icons/big-triangle.png');
+    height: 116px;
+    width: 100%;
+}
+
+footer {
+    background-color: #00247D;
+    height: 300px !important;
+}
+
+footer img, a {
+    height: 70px;
+    width: 70px;
+    margin: 0;
+    align-self: center;
+}
+
+footer p {
+    width: fit-content;
+    align-self: center;
+}
+
+/*
+ *==============================================================================
+ *==============================================================================
+ *===================== MEDIA QUERIES FOR MOBILE DESIGN ========================
+ *==============================================================================
+ *==============================================================================
+ */
+
+ 
