--- a/src/pages/styles/index.css
+++ b/src/pages/styles/index.css
@@ -231,6 +231,10 @@ p, label {
     align-self: center;
 }
 
+.signup-container h2 {
+    margin: 0;
+}
+
 form {
     display: flex;
     flex-direction: column;
@@ -333,5 +337,43 @@ footer p {
 
     .member {
         flex-direction: column;
+    }
+
+    .email-container {
+        height: unset;
+        width: 100%;
+        justify-content: center;
+        padding: 20px;
+    }
+
+    .signup-container {
+        height: 300px;
+        width: 90%;
+        border-radius: 30px;
+        padding: 30PX;
+        flex-direction: column;
+        justify-content: space-around;
+        align-content: center;
+        align-self: center;
+    }
+
+    form {
+        display: flex;
+        flex-direction: column;
+        margin: 0;
+        /* height: 100%; */
+        width: 100%;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+    .form-options {
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+    }
+
+    .email-form {
+        width: 100%;
     }
 }
