--- a/src/components/styles/style.css
+++ b/src/components/styles/style.css
@@ -16,13 +16,14 @@
 
 .menu-wrapper {
     width: 100%;
+    height: 100%;
 }
 
 .header-img {
     background-image: url('../../../public/icons/header-bg.png');
     background-repeat: no-repeat;
     background-size: contain;
-    height: 738px;
+    /* height: 738px; */
     width: 100%; 
 }
 
@@ -57,15 +58,14 @@
 
 .hero-container {
     display: flex;
-    height: 600px;
-    padding-left: 60px;
+    padding: 0 90px;
 }
 
 .slogan-container {
     color: #FFF;
     margin-top: 15px;
-    width: 723px;
-    height: 301px;
+    /* width: 723px; */
+    max-height: 301px;
     font-weight: bold;
     font-family: 'Helvetic', sans-serif;
     display: flex;
@@ -81,7 +81,7 @@
 .slogan-container h2 {
     font-weight: normal;
     font-size: 18px;
-    width: 500px;
+    /* width: 500px; */
 }
 
 .slogan-container button {
@@ -94,6 +94,7 @@
     font-size: 25px;
     align-self: center;
     cursor: pointer;
+    margin-right: 120px;
 }
 
 .company-logo {
@@ -156,6 +157,13 @@
         border-bottom: unset;
     }
 
+    .menu-wrapper {
+        height: 900px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+    }
+
     .header-img {
         background-image: unset;
     }
@@ -170,19 +178,32 @@
 
     .company-logo {
         order: 1;
+        margin: 0;
     }
 
     .slogan-container {
         color: #00247D;
         margin-top: 15px;
         width: 100%;
-        height: unset;
+        height: 100%;
         font-weight: bold;
         font-family: 'Helvetic', sans-serif;
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
+        justify-content: space-around;
         order: 2;
+    }
+
+    .slogan-container h1 {
+        padding: 0;
+    }
+
+    .slogan-container h2 {
+        margin: 0;
+    }
+
+    .slogan-container button {
+        margin: 0;
     }
 }
 
