--- a/src/components/styles/style.css
+++ b/src/components/styles/style.css
@@ -52,6 +52,11 @@
     transition: .2s;
 }
 
+.nav-menu li a {
+    color: #FFF;
+    text-decoration: none;
+}
+
 .nav-menu li:hover {
     border-bottom: 2px solid #FFF;
 }
@@ -141,13 +146,6 @@
 }
 
 @media screen and (max-width: 1190px) {
-    .header-img {
-        background-image: url('../../../public/icons/header-rectangle.png');
-        background-size: fixed;
-    }
-}
-
-@media screen and (max-width: 781px) {
     .nav-menu-container {
         display: flex;
         width: 100%;
