--- a/src/pages/styles/blog-index.css
+++ b/src/pages/styles/blog-index.css
@@ -5,7 +5,7 @@
     font-family: 'Helvetica', sans-serif;
 }
 
-header {
+.blog-header {
     width: 100%;
     background-color: #00247D;
     display: flex;
@@ -15,6 +15,10 @@ header {
 
 .logo-container {
     display: flex;
+}
+
+.logo-container a {
+    height: fit-content;
 }
 
 .mob-nav {
@@ -29,18 +33,18 @@ header {
     display: flex;
 }
 
-.mob-invisible {
+.blog-header .mob-invisible {
     display: none;
 }
 
-header img {
+.blog-header img {
     margin: 0;
     width: 69px;
     height: 49px;
     align-self: center;
 }
 
-header ul {
+.blog-header ul {
     color: #FFF;
     list-style: none;
     margin: 0;
@@ -53,16 +57,16 @@ header ul {
     flex: 1;
 }
 
-header ul li a {
+.blog-header ul li a {
     color: #FFF;
     text-decoration: none;
 }
 
-header li {
+.blog-header li {
     margin: 0;
 }
 
-header li:hover {
+.blog-header li:hover {
     border-bottom: 2px solid #FFF;
     cursor: pointer;
 }
@@ -124,7 +128,7 @@ header li:hover {
 }
 
 @media screen and (max-width: 1160px) {
-    header {
+    .blog-header {
         padding: 20px 100px;
         flex-direction: column;
         align-items: center;
@@ -135,11 +139,11 @@ header li:hover {
         margin-bottom: 30px;
     }
 
-    .web-nav {
-        display: none
+    .blog-header .web-nav {
+        display: none;
     }
 
-    .mob-nav {
+    .blog-header .mob-nav {
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -154,7 +158,7 @@ header li:hover {
         justify-content: space-evenly;
     }
 
-    .mob-visible {
+    .blog-header .mob-visible {
         padding: 20px 0;
         width: 100%;
         height: 180px;
