--- a/src/pages/styles/blog-index.css
+++ b/src/pages/styles/blog-index.css
@@ -80,7 +80,7 @@
 .main-container {
     background-color: #F0F0F0;
     padding: 20px;
-    height: 100vh;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
