--- a/src/pages/styles/index.css
+++ b/src/pages/styles/index.css
@@ -149,7 +149,7 @@ p, label {
 
 .tri-left {
     background-image: url('../../../public/icons/border-left.png');
-    width: 423px;
+    width: 100%;
     height: 88px;
 }
 
@@ -299,7 +299,7 @@ form label {
 .form-options {
     display: flex;
     justify-content: space-evenly;
-    width: 500px;
+    width: 100%;
 }
 
 .email-form {
@@ -463,4 +463,25 @@ footer p {
         flex-direction: column;
         height: 60%;
     }
+}
+
+@media screen and (max-width: 500px) {
+    .email-form {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .email-form input[type="email"] {
+        border-radius: 15px 15px 0 0;
+    }
+
+    .email-form button[type="submit"] {
+        border-radius: 0 0 15px 15px;
+    }
+
+    .email-form input[type="email"], .email-form button[type="submit"] {
+        width: 100%;
+    }
+
+
 }
