--- a/src/pages/styles/index.css
+++ b/src/pages/styles/index.css
@@ -46,14 +46,14 @@ p, label {
 
 .about-content h2 {
     width: fit-content;
-    font-size: 45px;
+    font-size: 2.5rem;
     align-self: center;
     margin: 0;
 }
 
 .about-content p {
     width: 100%;
-    font-size: 25px;
+    font-size: 1rem;
     font-family: 'Helvetica', sans-serif;
     line-height: 50px;
     line-break: auto;
@@ -247,6 +247,7 @@ p, label {
 
 .signup-container h2 {
     margin: 0;
+    font-size: 1.5rem;
 }
 
 form {
@@ -466,6 +467,10 @@ footer p {
 }
 
 @media screen and (max-width: 500px) {
+    .about-content {
+        padding: 20px;
+    }
+
     .email-form {
         display: flex;
         flex-direction: column;
