Minor fixes to div border

--- a/src/pages/styles/index.css
+++ b/src/pages/styles/index.css
@@ -149,7 +149,7 @@ p, label {
 
 .tri-left {
     background-image: url('../../../public/icons/border-left.png');
-    width: 100%;
+    width: 424px;
     height: 88px;
 }
 
